# wgand

./: .gitignore  .travis.yml  Baseline.ipynb  Baselines.ipynb  Evaluation.ipynb  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: tests.yml
NetAnom/: __init__.py  node_classifier.py  utils.py
data/: Disease_Info.csv  tissue_mapping_new.csv
notebooks/: Baselines.ipynb  Evaluation.ipynb
tests/: test_ensemble_anomaly_detector.py
wgand/: __init__.py  anomaly_detector.py  base_detector.py  base_estimator.py  ensemble_anomaly_detector.py  node_classifier.py  pca_anomaly_detector.py  utils.py
